<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.skypayjm.app.minesweeper.view.MainFragment">

    <Button
        android:id="@+id/newBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:background="@drawable/shadowbtn"
        android:text="@string/new_game"
        android:textColor="@color/Indigo" />
    <Button
        android:id="@+id/scoreBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:background="@drawable/shadowbtn"
        android:text="@string/pastscore"
        android:textColor="@color/Indigo" />

    <Button
        android:id="@+id/optionsBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:background="@drawable/shadowbtn"
        android:text="@string/options"
        android:textColor="@color/Indigo" />

    <Button
        android:id="@+id/helpBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:background="@drawable/shadowbtn"
        android:text="@string/help"
        android:textColor="@color/Indigo" />

</LinearLayout>
